cabal-version:         2.2
name:                  gogol-recaptchaenterprise
version:               1.0.0
synopsis:              Google reCAPTCHA Enterprise SDK.
homepage:              https://github.com/brendanhay/gogol
bug-reports:           https://github.com/brendanhay/gogol/issues
license:               MPL-2.0
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay+gogol@gmail.com>
copyright:             Copyright (c) 2015-2022 Brendan Hay
category:              Google
build-type:            Simple
extra-source-files:    README.md src/.gitkeep
description:

  .
  /Warning:/ This is an experimental prototype/preview release which is still
  under exploratory development and not intended for public use, caveat emptor!
  .
  This library is compatible with version @v1@
  of the API.

source-repository head
  type:     git
  location: git://github.com/brendanhay/gogol.git
  subdir:   gogol-recaptchaenterprise

flag field-selectors
  description: If record field selectors should be enabled. Disabling this requires GHC >=9.2 and the NoFieldSelectors extension.
  default: False
  manual: True

library
  default-language:  Haskell2010
  hs-source-dirs:    src gen

  ghc-options:
    -Wall
    -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates
    -funbox-strict-fields
    -fwarn-unused-packages

  if !flag(field-selectors) && impl(ghc >= 9.2)
    default-extensions: NoFieldSelectors

  exposed-modules:
      Gogol.RecaptchaEnterprise
    , Gogol.RecaptchaEnterprise.Projects.Assessments.Annotate
    , Gogol.RecaptchaEnterprise.Projects.Assessments.Create
    , Gogol.RecaptchaEnterprise.Projects.Keys.Create
    , Gogol.RecaptchaEnterprise.Projects.Keys.Delete
    , Gogol.RecaptchaEnterprise.Projects.Keys.Get
    , Gogol.RecaptchaEnterprise.Projects.Keys.GetMetrics
    , Gogol.RecaptchaEnterprise.Projects.Keys.List
    , Gogol.RecaptchaEnterprise.Projects.Keys.Migrate
    , Gogol.RecaptchaEnterprise.Projects.Keys.Patch
    , Gogol.RecaptchaEnterprise.Projects.Relatedaccountgroupmemberships.Search
    , Gogol.RecaptchaEnterprise.Projects.Relatedaccountgroups.List
    , Gogol.RecaptchaEnterprise.Projects.Relatedaccountgroups.Memberships.List
    , Gogol.RecaptchaEnterprise.Types

  other-modules:
      Gogol.RecaptchaEnterprise.Internal.Product
    , Gogol.RecaptchaEnterprise.Internal.Sum

  build-depends:
      gogol-core ^>= 1.0.0
    , base       >=  4.12 && < 5
